<resources>
    <string name="app_name">New York Times</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="search_hint">Search Articles</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="begin_date">Begin Date</string>
    <string name="new_desk">News Desk Value</string>
    <string name="sort_by">Sort By</string>
    <string name="share">Share</string>
    <string name="network_not_available">Network not available. Try after sometime</string>
    <string name="no_result">No result for search query</string>
</resources>
